style: updating colors and theme styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">SavePass</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="locker">Locker</string>
+    <string name="search_account_name">Search account name</string>
+    <string name="add_button">Add Button</string>
+    <string name="account_name">Account name</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="save">Save</string>
+    <string name="password_colon">Password:</string>
 </resources>
