--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="password">Password</string>
     <string name="save">Save</string>
     <string name="password_colon">Password:</string>
+    <string name="delete_password_account">Delete Password Account</string>
+    <string name="password_visibility_on_off">Password Visibility on/off</string>
+    <string name="my_passwords">My passwords</string>
 </resources>
